refactor pivccu modules

--- a/openccu-container.yaml
+++ b/openccu-container.yaml
@@ -28,7 +28,8 @@ package:
       echo ""
       echo "Prerequisites:"
       echo "  - Homematic kernel modules must be installed on the host"
-      echo "    (e.g., pivccu-modules-dkms for RPI-RF-MOD, HmIP-RFUSB)"
+      echo "    - pivccu-modules-rpi: Pre-built for Raspberry Pi with linux-rpi kernel"
+      echo "    - pivccu-modules-akms: AKMS source modules (auto-builds for any kernel)"
       echo "  - eq3_char_loop module must be loaded"
       echo ""
       echo "Start with:"
