improve microvm alpine compat

--- a/mise.toml
+++ b/mise.toml
@@ -13,3 +13,5 @@ MELANGE_PIPELINE_DIRS = "{{config_root}}/pipelines"
 QEMU_KERNEL_IMAGE = "{{config_root}}/kernel/{% if arch() == 'arm64' %}aarch64{% else %}{{arch()}}{% endif %}/vmlinuz"
 QEMU_KERNEL_MODULES = "{{config_root}}/kernel/{% if arch() == 'arm64' %}aarch64{% else %}{{arch()}}{% endif %}/modules/"
 QEMU_MICROVM_INIT_SIGNING_KEY = "local-melange.rsa"
+QEMU_MICROVM_INIT_REPOSITORY = "https://dl-cdn.alpinelinux.org/alpine/v3.23/main"
+QEMU_MICROVM_INIT_KEYRING = "https://alpinelinux.org/keys/alpine-devel@lists.alpinelinux.org-4a6a0840.rsa.pub"
