--- a/microvm-init.yaml
+++ b/microvm-init.yaml
@@ -1,7 +1,7 @@
 package:
   name: microvm-init
   version: 0.0.1
-  epoch: 109
+  epoch: 111
   description: Minimal busybox init for microvm workloads (Alpine port)
   copyright:
     - license: Apache-2.0
@@ -10,9 +10,10 @@ package:
     - aarch64
   dependencies:
     runtime:
+      - alpine-baselayout-data
       - attr
       - busybox
-      - gnutar
+      - tar
       - iproute2
       - kmod
       - mount
