fix: add --pipeline-dir to CI build action

--- a/.github/actions/build-package/action.yaml
+++ b/.github/actions/build-package/action.yaml
@@ -105,6 +105,7 @@ runs:
           --out-dir packages/
           --cache-dir cache/
           --generate-index=false
+          --pipeline-dir ./pipelines
         )
 
         # Add local repo if we have dependencies
