fix(chip-sdk): patch pigweed proto.gni duplicate output collision
The _includes generated_file target was being created for all toolchains
but outputting to the same path (protocol_buffer toolchain's gen dir).
This caused GN "duplicate output file" errors when using custom toolchains.

Fix by wrapping the _includes target creation in a conditional that only
runs in pw_protobuf_compiler_TOOLCHAIN, matching how _sources is handled.

--- a/chip-sdk.yaml
+++ b/chip-sdk.yaml
@@ -97,6 +97,11 @@ pipeline:
       # The chip-wheels patch sets /data but we want a more standard location
       sed -i 's|\\"/data\\"|\\"/var/lib/chip\\"|g' src/platform/Linux/BUILD.gn
 
+      # Fix pigweed proto.gni duplicate output file collision
+      # The _includes target must only be created in pw_protobuf_compiler_TOOLCHAIN
+      # to avoid multiple toolchains generating to the same output path
+      patch -p1 < /home/build/chip-sdk/fix-pigweed-proto-duplicate.patch
+
   # Set up Python build environment
   - runs: |
       cd chip-wheels/connectedhomeip
