fix(home-assistant-container): fix @VERSION@ not substituted in scriptlets
Scriptlets are embedded verbatim in packages and not processed by sed.
Move CONTAINER_IMAGE default to confd (which is substituted) and remove
broken fallback from post-install/post-upgrade scriptlets.

--- a/home-assistant-container.yaml
+++ b/home-assistant-container.yaml
@@ -1,7 +1,7 @@
 package:
   name: home-assistant-container
   version: 2026.1.2
-  epoch: 11
+  epoch: 12
   description: "Home Assistant Core running in Podman container"
   copyright:
     - license: Apache-2.0
@@ -40,8 +40,8 @@ package:
       # Check if running on diskless system and auto-setup
       if [ -d /media/mmcblk0p1 ] || [ -d /media/sda1 ] || [ -d /media/usb ]; then
         echo "Diskless system detected. Setting up container image..."
-        . /etc/conf.d/home-assistant-container 2>/dev/null || true
-        setup-container-image home-assistant "${CONTAINER_IMAGE:-ghcr.io/home-assistant/home-assistant:@VERSION@}"
+        . /etc/conf.d/home-assistant-container
+        setup-container-image home-assistant "$CONTAINER_IMAGE"
       fi
 
       echo ""
@@ -58,8 +58,8 @@ package:
       # Auto-upgrade container image on diskless systems
       if [ -d /media/mmcblk0p1 ] || [ -d /media/sda1 ] || [ -d /media/usb ]; then
         echo "Upgrading Home Assistant container image..."
-        . /etc/conf.d/home-assistant-container 2>/dev/null || true
-        setup-container-image home-assistant "${CONTAINER_IMAGE:-ghcr.io/home-assistant/home-assistant:@VERSION@}" --upgrade
+        . /etc/conf.d/home-assistant-container
+        setup-container-image home-assistant "$CONTAINER_IMAGE" --upgrade
       fi
 
 environment:
