--- a/openccu-container.yaml
+++ b/openccu-container.yaml
@@ -1,7 +1,7 @@
 package:
   name: openccu-container
   version: 3.85.7.20251129
-  epoch: 0
+  epoch: 1
   description: "OpenCCU (Podman container) - Homematic CCU"
   copyright:
     - license: Apache-2.0
@@ -19,8 +19,8 @@ package:
       # Check if running on diskless system and auto-setup
       if [ -d /media/mmcblk0p1 ] || [ -d /media/sda1 ] || [ -d /media/usb ]; then
         echo "Diskless system detected. Setting up container image..."
-        . /etc/conf.d/openccu-container 2>/dev/null || true
-        setup-container-image openccu "${CONTAINER_IMAGE:-ghcr.io/openccu/openccu:@VERSION@}"
+        . /etc/conf.d/openccu-container
+        setup-container-image openccu "$CONTAINER_IMAGE"
       fi
 
       echo ""
@@ -43,8 +43,8 @@ package:
       # Auto-upgrade container image on diskless systems
       if [ -d /media/mmcblk0p1 ] || [ -d /media/sda1 ] || [ -d /media/usb ]; then
         echo "Upgrading OpenCCU container image..."
-        . /etc/conf.d/openccu-container 2>/dev/null || true
-        setup-container-image openccu "${CONTAINER_IMAGE:-ghcr.io/openccu/openccu:@VERSION@}" --upgrade
+        . /etc/conf.d/openccu-container
+        setup-container-image openccu "$CONTAINER_IMAGE" --upgrade
       fi
 
 environment:
