--- a/podinfo-container.yaml
+++ b/podinfo-container.yaml
@@ -1,7 +1,7 @@
 package:
   name: podinfo-container
   version: 6.9.4
-  epoch: 0
+  epoch: 1
   description: "Podinfo (Podman container) - Go microservice template"
   copyright:
     - license: Apache-2.0
@@ -19,8 +19,8 @@ package:
       # Check if running on diskless system and auto-setup
       if [ -d /media/mmcblk0p1 ] || [ -d /media/sda1 ] || [ -d /media/usb ]; then
         echo "Diskless system detected. Setting up container image..."
-        . /etc/conf.d/podinfo-container 2>/dev/null || true
-        setup-container-image podinfo "${CONTAINER_IMAGE:-ghcr.io/stefanprodan/podinfo:@VERSION@}"
+        . /etc/conf.d/podinfo-container
+        setup-container-image podinfo "$CONTAINER_IMAGE"
       fi
 
       echo ""
@@ -37,8 +37,8 @@ package:
       # Auto-upgrade container image on diskless systems
       if [ -d /media/mmcblk0p1 ] || [ -d /media/sda1 ] || [ -d /media/usb ]; then
         echo "Upgrading Podinfo container image..."
-        . /etc/conf.d/podinfo-container 2>/dev/null || true
-        setup-container-image podinfo "${CONTAINER_IMAGE:-ghcr.io/stefanprodan/podinfo:@VERSION@}" --upgrade
+        . /etc/conf.d/podinfo-container
+        setup-container-image podinfo "$CONTAINER_IMAGE" --upgrade
       fi
 
 environment:
